--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,8 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.1.9"
     implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
     implementation "com.github.bumptech.glide:glide:4.8.0"
-    implementation "org.jetbrains.anko:anko-commons:0.10.5"
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"
+    implementation "org.jetbrains.anko:anko-sqlite:$anko_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
